--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.5.2",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "kerberos": "0.0.21",
